--- a/apps/docs/docs/concepts/usage-on-client.mdx
+++ b/apps/docs/docs/concepts/usage-on-client.mdx
@@ -1,142 +1,234 @@
 ---
 title: Usage on client
 sidebar:
-  order: 5
+  order: 6
 ---
 
-You can also use Kilpi on the client-side, as long as you have a server-side instance of Kilpi you can connect to using the [endpoint plugin](https://kilpi.dev/docs/docs/plugins/endpoint).
+You can also use Kilpi on the client-side, as long as you have a server-side instance of Kilpi you can connect to using the [endpoint plugin](https://kilpi.dev/docs/docs/plugins/endpoint). Follow this guide to set up `KilpiClient`.
 
-This works especially well with frameworks like Next.js, where you can import the type of the server-side instance on the client and use it for type inference, similarly as with [tRPC](https://trpc.io/).
+<Aside type="tip">
+  This works especially well with frameworks like Next.js, where you can import the type of the
+  server-side instance on the client and use it infer the types, similarly as with
+  [tRPC](https://trpc.io/).
+</Aside>
 
-By design, **all authorization is performed on the server**. The `@kilpi/client` package only fetches authorization decisions from the server, **with request caching, batching, and deduping** for performance.
+<Aside>
+  By design, **all authorization is performed on the server**. The `@kilpi/client` package only
+  fetches authorization decisions from the server, **with request caching, batching, and deduping**
+  for performance.
+</Aside>
 
 ---
+
+## Setup
 
 <Steps>
+<Step>
+### Install the `@kilpi/client` package
 
-1.  ### Install the `@kilpi/client` package
-
-    <Tabs syncKey="package-manager">
-      <Tab label="npm">
-        ```bash
-        npm install @kilpi/client
-        ```
-      </Tab>
-
-      <Tab label="yarn">
-        ```bash
-        yarn add @kilpi/client
-        ```
-      </Tab>
-
-      <Tab label="pnpm">
-        ```bash
-        pnpm add @kilpi/client
-        ```
-      </Tab>
-
-      
-      <Tab label="bun">
-        ```bash
-        bun add @kilpi/client
-        ```
-      </Tab>
-    </Tabs>
-
-
-2.  ### Setup environment variables
-
-    Create **public** environment variables (e.g. with `NEXT_PUBLIC_` or similar prefix to ensure they are included in the client bundle).
-
+<Tabs syncKey="package-manager">
+  <Tab label="npm">
     ```bash
-    PUBLIC_KILPI_URL=http://localhost:3000/api/kilpi
-    PUBLIC_KILPI_SECRET=my-secret-but-public-value
+    npm install @kilpi/client
     ```
+  </Tab>
 
-3.  ### Provide an authorization endpoint
+{" "}
 
-    Use the [EndpointPlugin](/docs/plugins/endpoint) provided by `@kilpi/core` to create an authorization endpoint. It exposes the `Kilpi.createPostEndpoint()` function, which constructs a web-standard request-response function to use as your endpoint.
+<Tab label="yarn">```bash yarn add @kilpi/client ```</Tab>
 
+{" "}
+
+<Tab label="pnpm">```bash pnpm add @kilpi/client ```</Tab>
+
+  <Tab label="bun">
+    ```bash
+    bun add @kilpi/client
+    ```
+  </Tab>
+</Tabs>
+</Step>
+<Step>
+
+### Setup environment variables
+
+Create **public** environment variables (e.g. with `PUBLIC_`, `NEXT_PUBLIC_` or similar prefix to ensure they are included in the client bundle).
+
+```bash
+PUBLIC_KILPI_URL=http://localhost:3000/api/kilpi
+PUBLIC_KILPI_SECRET=generate-secret
+```
+
+<GenerateSecretButton target="generate-secret"></GenerateSecretButton>
+</Step>
+<Step>
+
+### Setup an authorization endpoint
+
+The Kilpi client requires an endpoint for fetching authorization decisions.
+
+Use the [EndpointPlugin](/docs/plugins/endpoint) from `@kilpi/core` to create an authorization endpoint. It exposes the `Kilpi.createPostEndpoint()` function, which constructs a web-standard request-response function to use as your endpoint.
+
+```ts
+// kilpi.ts
+import { createKilpi, EndpointPlugin } from "@kilpi/core";
+
+export const Kilpi = createKilpi({
+  ...,
+  plugins: [
+    EndpointPlugin({ secret: process.env.PUBLIC_KILPI_SECRET })
+  ]
+})
+```
+
+<Aside type="tip">
+  The endpoint automatically supports [SuperJSON](https://www.npmjs.com/package/superjson)
+  serialization for sending dates and other non-JSON-safe values.
+</Aside>
+
+Expose the endpoint using your framework of choice.
+
+<Tabs syncKey="backend">
+  <Tab label="Next.js (App router)">
     ```ts
-    // kilpi.ts
-    export const Kilpi = createKilpi({
-      ...,
-      plugins: [
-        EndpointPlugin({ secret: process.env.NEXT_PUBLIC_KILPI_SECRET })
-      ]
-    })
+    // app/api/kilpi/route.ts
+    export const POST = Kilpi.createPostEndpoint();
     ```
-
-    Expose the endpoint using your framework of choice.
-
-    <Tabs syncKey="backend">
-      <Tab label="Next.js (App router)">
-        ```ts
-        // app/api/kilpi/route.ts
-        export const POST = Kilpi.createPostEndpoint();
-        ```
-      </Tab>
-      <Tab label="Hono">
-        ```ts
-        const endpoint = Kilpi.createPostEndpoint();
-
-        app.post('/api/kilpi', async (c) => await endpoint(c.req.raw));
-        ```
-      </Tab>
-    </Tabs>
-
-    More guides are coming, but as the `Kilpi.createPostEndpoint()` returns a web-standard request-response function, you can use it with any framework that supports web standards, or create a wrapper around it to support web standards yourself.
-
-4.  ### Create your `KilpiClient` instance.
-
-    Create your `KilpiClient` instance with `createKilpiClient`. This object is used to fetch authorization decisions from the server.
-
+  </Tab>
+  <Tab label="Hono">
     ```ts
-    // kilpi-client.ts
-    import type { Kilpi } from "./kilpi.ts";
+    const endpoint = Kilpi.createPostEndpoint();
 
-    export const KilpiClient = createKilpiClient({
-      infer: {} as typeof Kilpi, // Infer subject and policies from server instance
-      connect: {
-        endpointUrl: process.env.NEXT_PUBLIC_KILPI_URL,
-        secret: process.env.NEXT_PUBLIC_KILPI_SECRET
-      },
-    })
+    app.post('/api/kilpi', async (c) => await endpoint(c.req.raw));
     ```
 
-5.  ### Start using on the client
+  </Tab>
+</Tabs>
 
-    Now you can use the `KilpiClient` instance to fetch the subject and authorization decisions. To enable passing query options, such as abort signals, it has a different signature than the server side `Kilpi` instance.
-    
-    ```ts
-    const subject = await KilpiClient.fetchSubject();
-    const subject = await KilpiClient.fetchSubject({ queryOptions: { ... }}); 
+More guides are coming, but as the `Kilpi.createPostEndpoint()` returns a web-standard request-response function, you can use it with any framework that supports web standards, or create a wrapper around it to support web standards yourself.
 
-    const canCreateDocument = await KilpiClient.fetchIsAuthorized({
-      key: "documents:create",
-      queryOptions: { ... } // Optional
-    });
-    const canUpdateComment = await KilpiClient.fetchIsAuthorized({
-      key: "comments:update",
-      resource: comment,
-      queryOptions: { ... } // Optional
-    });
-    ```
+</Step>
+<Step>
 
-    <Aside>
-    All requests are **cached**, **deduped** and **batched** for performance. You can clear the cache with `KilpiClient.clearCache()` and control the batching options in `createKilpiClient` with the `batching` option.
-    </Aside>
-  
-6.  ### Integrate into your frontend framework of choice
+### Create your `KilpiClient` instance.
 
-    Use `@kilpi/client` directly with your frontend framework of choice or use one of the provided plugins.
+Create your `KilpiClient` instance with `createKilpiClient`. This object is used to fetch authorization decisions from the server.
 
-    <Tabs syncKey="frontend">
-      <Tab label="React">
-        The `@kilpi/react-client` package provides hooks and components for using Kilpi with React on the client.
+Optionally, pass `infer` for improved typesafety, and any plugins in `plugins`.
 
-        View [the documentation](/docs/plugins/react-client) for the React Client plugin to start using it.
-      </Tab>
-    </Tabs>
+```ts
+// kilpi-client.ts
+import type { Kilpi } from "./kilpi.ts";
+
+export const KilpiClient = createKilpiClient({
+  infer: {} as typeof Kilpi, // Infer subject and policies from server instance
+  connect: {
+    endpointUrl: process.env.PUBLIC_KILPI_URL,
+    secret: process.env.PUBLIC_KILPI_SECRET,
+  },
+});
+```
+
+</Step>
+<Step>
+
+### Start using on the client
+
+Now you can use the `KilpiClient` instance to fetch the subject and authorization decisions. To enable passing query options, such as abort signals, it has a different signature than the server side `Kilpi` instance.
+
+#### Fetching the subject
+
+```ts
+// Fetch the subject
+const subject = await KilpiClient.fetchSubject();
+
+// Or optionally with query options
+const subject = await KilpiClient.fetchSubject({
+  queryOptions: { signal },
+});
+```
+
+#### Fetching authorization decisions
+
+```ts
+// Fetch authorization decisions for policy without resource
+const canCreateDocument = await KilpiClient.fetchIsAuthorized({
+  key: "documents:create",
+  queryOptions: { ... } // Optional
+});
+
+// Fetch authorization decisions for policy with resource
+const canUpdateComment = await KilpiClient.fetchIsAuthorized({
+  key: "comments:update",
+  resource: comment,
+  queryOptions: { ... } // Optional
+});
+```
+
+<Aside>
+All requests are **cached**, **deduped** and **batched** for performance. You can clear the cache with `KilpiClient.clearCache()`, e.g. as
+
+```ts
+onAuthStateChange(() => KilpiClient.clearCache());
+```
+
+Control the batching options in `createKilpiClient` with the `batching` option.
+
+</Aside>
+
+</Step>
 
 </Steps>
+
+## Usage with frontend frameworks
+
+You can use `@kilpi/client` with your frontend framework of choice or use one of the provided plugins that provide hooks, components and other bindings for the KilpiClient.
+
+<Tabs syncKey="frontend">
+  <Tab label="React">
+    The `@kilpi/react-client` package provides hooks and components for using Kilpi with React on the client.
+
+    View [the documentation](/docs/plugins/react-client) for the React Client plugin to start using it.
+
+
+    ```tsx
+    const KilpiClient = createKilpiClient({
+      // ...,
+      plugins: [ReactClientComponentPlugin()],
+    });
+
+    const {
+      ClientAccess,
+      useSubject,
+      useIsAuthorized
+    } = KilpiClient.ReactClient.createComponents()
+
+    function Component() {
+      const subject = useSubject();
+      const { isAuthorized: canCreateDocuments } = useIsAuthorized("documents:create");
+
+      return (
+        <>
+          {/* Option 1 */}
+          {canCreateDocument && <button>Create document</button>}
+
+          {/* Option 2 */}
+          <ClientAccess
+            policy="documents:delete"
+            resource={document}
+            fallback={<p>You are not authorized to create this document</p>}
+          >
+            <p>You are authorized to create this document</p>
+          </ClientAccess>
+        </>
+      )
+    }
+    ```
+
+  </Tab>
+</Tabs>
+
+<Aside>
+  More plugins for more frameworks coming in the future. [How to support
+  development](/docs/getting-started/support).
+</Aside>
