--- a/apps/docs/docs/concepts/plugin.mdx
+++ b/apps/docs/docs/concepts/plugin.mdx
@@ -1,65 +1,171 @@
 ---
-title: Plugin
+title: Plugins
 ---
 
-Plugins are used to extend the functionality of Kilpi. They are implemented using the same public [hooks APIs](/docs/docs/concepts/hooks) as available to you.
+Plugins are used to extend the functionality of Kilpi.
 
-In addition, plugins can extend the `KilpiCore` instance by providing custom functions.
+<Aside>
+Plugins can provide custom functionality by e.g. extending the `KilpiCore` or `KilpiClient` instance with new methods, or by using [hooks](/docs/docs/concepts/hooks).
+</Aside>
 
-## Extending the Kilpi instance
+## Available plugins
 
-Take for example the `ReactServerComponentsPlugin`, which not only automatically provides a scope for RSCs, but also provides components via `Kilpi.ReactServer.createComponents`.
+List of all available plugins.
 
-```ts
+<LinkCard
+  title="Audit Plugin"
+  description="Utility for auditing your authorizations."
+  href="/docs/plugins/audit"
+/>
+<LinkCard
+  title="Endpoint Plugin"
+  description="Create a web standard endpoint for requesting authorization decisions, used with the Kilpi client."
+  href="/docs/plugins/endpoint"
+/>
+<LinkCard
+  title="React Server Components Plugin"
+  description="React Server Components for working with Kilpi and automatic RSC scope."
+  href="/docs/plugins/react-server-components"
+/>
+<LinkCard
+  title="React Client Plugin"
+  description="React Client components for working with Kilpi client."
+  href="/docs/plugins/react-client"
+/>
+
+## Extending `KilpiCore` or `KilpiClient`
+
+Plugins can extend the `KilpiCore` or `KilpiClient` instance with new methods. For example, the [audit plugin](/docs/plugins/audit) adds a `flush()` method under the `Kilpi.audit` namespace.
+
+```ts {3,6}
 const Kilpi = await createKilpi({
   ...,
-  plugins: [ReactServerComponentsPlugin()],
+  plugins: [AuditPlugin()],
 });
 
-const { Access } = Kilpi.ReactServer.createComponents();
+await Kilpi.audit.flush();
 ```
 
 ## Creating custom plugins
 
-Creating custom plugins is easy with the `createKilpiPlugin` method. For improved typesafety and customizability, you should wrap your plugin in a generic function. The `createKilpiPlugin` method will take in the `Kilpi` instance and return the public interface for the plugin (or `{}` if no public interface).
+<Aside>
+You are welcome to create custom plugins for Kilpi for use in your own application and as packages for the community. Please share your public community plugins on [Github](https://github.com/Jussinevavuori/kilpi/issues) and they can be added to the documentation.
+</Aside>
 
-Let's create an utility plugin for counting the total number of authorizations.
+Creating custom plugins is easy with the `createKilpiPlugin` and `createKilpiClientPlugin` methods. The respectively take in the `KilpiCore` or `KilpiClient` instance and return the public interface for the plugin (or `{}` if no public interface).
+
+<Aside type="tip">
+To make your plugin 100% typesafe, wrap it in a generic function:
+
+1. Accept `<T extends AnyKilpiCore>` as a type argument.
+2. Accept the `KilpiCore` or `KilpiClient` parameter as `Kilpi: T`.
+</Aside>
+
+### Example server-side plugin
+
+Let's create an utility plugin for counting the total number of authorizations as an example.
 
 ```ts
+// 1. CREATE A PLUGIN
+
+// Create generic function for instantiating your plugin
 export function AuthorizationCounterPlugin<T extends AnyKilpiCore>(
+  // Allow for configuring the plugin's functionality
   options: { initialValue: number }
 ) {
-  return createKilpiPlugin<T>((Kilpi: T) => {
-    let count = options.initialValue;
 
-    // Your plugin logic here: Call hooks, etc.
+  // All plugins must return `createKilpiPlugin(...)`
+  return createKilpiPlugin<T>((Kilpi: T) => {
+
+    // Your plugin logic here: Create state, call hooks, etc.
+    let count = options.initialValue;
     Kilpi.hooks.onAfterAuthorization(() => {
       count += 1;
     });
 
-    // Return the instance (optionally add your custom methods)
+    // Return the public interface and methods (or {}) for the plugin.
+    // The methods should be namespaced, as done here with the
+    // `Kilpi.authorizationCounter` namespace.
     return {
       authorizationCounter: {
+
+        // Custom method
         get() {
-          return value;
+          return count;
         },
       }
     }
   });
 }
 
-// Apply and use
+// 2. USE THE PLUGIN
+
 const Kilpi = createKilpi({
   ...,
-  plugins: [AuthorizationCounterPlugin({ initialValue: 10 })],
+  plugins: [
+    // Apply and configure the plugin
+    AuthorizationCounterPlugin({ initialValue: 10 })
+  ],
 });
 
+// Use custom methods if any provided
 Kilpi.authorizationCounter.get();
 ```
----
 
 <LinkCard 
   title="Learn more about hooks" 
   description="Learn how to use hooks to extend Kilpi and create custom, advanced functionality."
   href="/docs/concepts/hooks"
 />
+
+### Example client-side plugin
+
+Similarly, let's create a counter plugin for the client-side `KilpiClient` instance.
+
+> [Hooks](/docs/concepts/hooks) for `KilpiClient` are upcoming.
+
+```ts
+// 1. CREATE A PLUGIN
+
+// Create generic function for instantiating your plugin
+export function AuthorizationCounterClientPlugin<T extends AnyKilpiCore>(
+  // Allow for configuring the plugin's functionality
+  options: { initialValue: number }
+) {
+
+  // All plugins must return `createKilpiClientPlugin(...)`
+  return createKilpiClientPlugin<T>((KilpiClient: T) => {
+
+    // Your plugin logic here: Create state, call hooks, etc.
+    let count = options.initialValue;
+
+    // Return the public interface and methods (or {}) for the plugin.
+    // The methods should be namespaced, as done here with the
+    // `KilpiClient.authorizationCounter` namespace.
+    return {
+      authorizationCounter: {
+        // Custom methods
+        get() {
+          return count;
+        },
+        increment() {
+          count += 1;
+        },
+      }
+    }
+  });
+}
+
+// 2. USE THE PLUGIN
+const KilpiClient = createKilpiClient({
+  ...,
+  plugins: [
+    // Apply and configure the plugin
+    AuthorizationCounterClientPlugin({ initialValue: 10 })
+  ],
+});
+
+// Use custom methods if any provided
+KilpiClient.authorizationCounter.increment();
+KilpiClient.authorizationCounter.get(); // 11
+```
