--- a/apps/docs/docs/plugins/audit.mdx
+++ b/apps/docs/docs/plugins/audit.mdx
@@ -11,6 +11,8 @@ The audit plugin is already included in `@kilpi/core`. Apply the plugin in your 
 
 ```diff lang="ts"
 // kilpi.ts
+import { createKilpi, AuditPlugin } from "@kilpi/core"
+
 export const Kilpi = createKilpi({
   getSubject,
   policies,
@@ -20,15 +22,50 @@ export const Kilpi = createKilpi({
 
 The audit plugin is designed to primarily work independently after being configured. You however need to configure at the least the `strategy` and `onFlushEvents` callback.
 
-## Configure strategy
+---
 
-Sending every event immediately and separately is not efficient. Instead, AuditPlugin provides several different strategies you can pick to decide how you want to batch and flush your events.
+## Configure external service (`onFlushEvents`)
+
+AuditPlugin is fully agnostic to the external service you want to send events to. Connect your audit, logging, or monitoring service with the `onFlushEvents` callback.
+
+```ts
+AuditPlugin({
+  async onFlushEvents(events) {
+    await fetch(`https://my-audit-service.com/send-events`, {
+      method: "POST",
+      body: JSON.stringify(events),
+      headers: { "Content-Type": "application/json" },
+    });
+  },
+  // ...
+});
+```
+
+<Aside>
+  In the future, we may provide integrations for popular services that build on top of `AuditPlugin`, such as Datadog. For example an integration might look like this:
+
+```ts
+plugins: [
+  DatadogAuditPlugin({
+    apiKey: process.env.DATADOG_API_KEY,
+    // ...
+  }),
+];
+```
+
+</Aside>
+
+---
+
+## Configure a strategy
+
+Sending every event immediately and separately is not efficient. Instead, AuditPlugin provides several different **strategies for batching and flushing** your events.
 
 ### Batch strategy (Recommended)
 
 **The recommended strategy is batching**. When an event is received, a new batch is started. Every event after that event is added to the batch until `batchTimeoutSeconds` expires, at which point all events in the batch are sent to the external service.
 
-```ts
+```ts {2-3}
 AuditPlugin({
   strategy: "batch",
   batchTimeoutSeconds: 5,
@@ -40,9 +77,9 @@ You can also prematurely flush the current batch by calling `Kilpi.audit.flush()
 
 ### Periodical strategy
 
-The periodical strategy sends events every `flushIntervalSeconds` seconds (if any).
+The periodical strategy sends events every `flushIntervalSeconds` seconds (if there are any events to send).
 
-```ts
+```ts {2-3}
 AuditPlugin({
   strategy: "periodical",
   flushIntervalSeconds: 5,
@@ -56,65 +93,52 @@ You can also prematurely flush the current batch by calling `Kilpi.audit.flush()
 
 The manual strategy collects all events and waits until `Kilpi.audit.flush()` is manually called by you. This allows for full developer control on when events are flushed.
 
-```ts
+```ts {2}
 AuditPlugin({
   strategy: "manual",
   async onFlushEvents(events) { ... },
 })
 
-Kilpi.audit.flush()
+await Kilpi.audit.flush()
 ```
 
 ### Immediate strategy
 
-Finally, primarily for testing purposes, the immediate strategy sends every event separately immediately as they come. Calling `Kilpi.audit.flush()` will have no effect.
+Finally, primarily for testing purposes, the immediate strategy sends every event separately and immediately as they come. Calling `Kilpi.audit.flush()` will have no effect, as no batching is done.
 
-```ts
+```ts {2}
 AuditPlugin({
   strategy: "immediate",
   async onFlushEvents(events) { ... },
 })
 ```
 
-### Using in serverless environments
+---
+
+## Using in serverless environments
 
 Batching in serverless environments is difficult. You have to ensure that the batch has time to flush and complete before the serverless function dies.
 
-For this purpose, AuditPlugin allows you to pass a `waitUntil` function provided by some serverless environments, such as [Vercel's `waitUntil`](https://vercel.com/docs/functions/functions-api-reference/vercel-functions-package#waituntil) or [Cloudflare's `waitUntil`](https://developers.cloudflare.com/workers/runtime-apis/context/#waituntil). Pass it as the `waitUntil` option to the plugin.
+For this purpose, `AuditPlugin` allows you to pass a `waitUntil` function provided by some serverless environments, such as [Vercel](https://vercel.com/docs/functions/functions-api-reference/vercel-functions-package#waituntil) or [Cloudflare](https://developers.cloudflare.com/workers/runtime-apis/context/#waituntil). Pass it as the `waitUntil` option to the plugin.
 
-All strategies respect the `waitUntil` option.
+<Aside>All strategies respect the `waitUntil` option automatically.</Aside>
 
-```ts
+```ts {1,6}
 import { waitUntil } from "@vercel/functions";
 
 AuditPlugin({
   strategy: "batch",
   batchTimeoutSeconds: 5,
-  waitUntil, // Signature: (promise: Promise<unknown>) => void
+  waitUntil, // (promise: Promise<unknown>) => void
   async onFlushEvents(events) { ... },
 })
 ```
 
 > Note for Next.js: Using [`after`](https://nextjs.org/docs/app/api-reference/functions/after) is possible however it will only work in RSCs.
 
-## Configure external service
+---
 
-AuditPlugin is fully agnostic to the external service you want to send events to. Connect your audit, logging or monitoring service with the `onFlushEvents` callback.
-
-```ts
-AuditPlugin({
-  ...,
-  async onFlushEvents(events) {
-    await fetch(`https://my-audit-service.com/send-events`, {
-      method: "POST",
-      body: JSON.stringify(events),
-      headers: { "Content-Type": "application/json" },
-    })
-  },
-})
-```
-
-### Filtering events
+## Filtering events
 
 You may optionally filter events using the `filterEvents` option. For example, to only include denied decisions you may do the following.
 
@@ -127,9 +151,11 @@ AuditPlugin({
 })
 ```
 
+---
+
 ## Enabling and disabling
 
-You may optionally provide the `disabled` option to disable the plugin.
+You may optionally provide the `disabled` option to disable the plugin. By default, the plugin is enabled.
 
 ```ts
 AuditPlugin({
@@ -138,17 +164,34 @@ AuditPlugin({
 })
 ```
 
-To dynamically enable or disable the plugin, you can use the `Kilpi.audit.enable()` and `Kilpi.audit.disable()` methods.
+To dynamically enable or disable the plugin, you can use the following methods.
+
+```ts
+Kilpi.audit.disable();
+Kilpi.audit.enable();
+```
+
+---
 
 ## Manual flushing
 
 For more precise control on when the current batch is flushed, you may call the `Kilpi.audit.flush()` method to force an immediate flush.
 
+```ts
+// Flush on SIGINT before exiting
+process.on("SIGINT", async () => {
+  await Kilpi.audit.flush();
+  process.exit(0);
+});
+```
+
 This works with all strategies except the immediate strategy as it does not do batching.
+
+---
 
 ## Logging
 
-You may be tempted to use the AuditPlugin for logging, and it can be done. However, logging authorization decisions using a hook is much easier. See example below.
+You may be tempted to use the `AuditPlugin` for logging, and it can be done. However, logging authorization decisions using the `onAfterAuthorization` hook (used internally by `AuditPlugin`) is much easier. See example below.
 
 ```diff lang="ts"
 // kilpi.ts
@@ -159,16 +202,14 @@ You may be tempted to use the AuditPlugin for logging, and it can be done. Howev
 -     AuditPlugin({
 -       strategy: "immediate",
 -       async onFlushEvents(events) {
--         for (const event of events) {
--           console.log(`...`)
+-         for (const e of events) {
+-           console.log(format(e))
 -         }
 -       }
 -     }),
 -   ]
   });
-  
+
 + // Logging using hooks
-+ Kilpi.hooks.onAfterAuthorization((event) => {
-+   console.log(`...`)
-+ })
++ Kilpi.hooks.onAfterAuthorization((e) => console.log(format(e)));
 ```
