--- a/apps/docs/docs/plugins/endpoint.mdx
+++ b/apps/docs/docs/plugins/endpoint.mdx
@@ -6,6 +6,8 @@ The endpoint plugin is already included in `@kilpi/core`. Apply the plugin in yo
 
 ```diff lang="ts"
 // kilpi.ts
+import { createKilpi, EndpointPlugin } from "@kilpi/core";
+
 export const Kilpi = createKilpi({
   getSubject,
   policies,
@@ -21,14 +23,24 @@ The endpoint plugin exposes the `Kilpi.createPostEndpoint()` function which cons
 
 ```ts
 // app/api/kilpi/route.ts
+// (req: Request) => Promise<Response>
 export const POST = Kilpi.createPostEndpoint();
 ```
 
-See [this guide](/docs/getting-started/usage-on-client) for how to set up the client to call the endpoint with utility functions including batching, caching and deduplication, as shown below.
+See [usage on client](/docs/getting-started/usage-on-client) for how to set up `KilpiClient` for calling the endpoint as below including batching, caching, and deduplication.
 
 ```ts
-await KilpiClient.fetchIsAuthorized({ key: "documents:delete", resource: myDocument });
+await KilpiClient.fetchIsAuthorized({
+  key: "documents:delete",
+  resource: myDocument,
+});
 ```
+
+## SuperJSON serialization
+
+The endpoint plugin uses [SuperJSON](https://www.npmjs.com/package/superjson) for serializing the request and response bodies. This allows you to send complex data types such as dates, maps, sets, and other non-JSON-safe values in the request body and receive them in the response.
+
+---
 
 ## API reference
 
@@ -36,22 +48,20 @@ The API is designed for `@kilpi/client` and is not optimized for calling manuall
 
 ### Basic fetch example
 
-The following is a basic example of how you can call the endpoint manually. It includes bearer authentication with `secret` and `superJsonStringify` for serializing the request body.
+The following is a basic example of how you can call the endpoint manually. It includes bearer authentication with `secret` and `SuperJSON.stringify` for serializing the request body.
 
 ```ts
-import { stringify as superJsonStringify } from "superjson";
-
-const secret = "...";
+import * as SuperJSON from "superjson";
 
 function callKilpiApiEndpoint(body: RequestBody) {
-  const respones = await fetch("https://example.com/api/kilpi", {
+  const response = await fetch(process.env.PUBLIC_KILPI_URL, {
     method: "POST",
     headers: {
       "Content-Type": "application/json",
-      Authorization: `Bearer ${secret}`,
+      Authorization: `Bearer ${process.env.PUBLIC_KILPI_SECRET}`,
     },
-    body: superJsonStringify(body),
-  })
+    body: SuperJSON.stringify(body),
+  });
 
   if (!response.ok) throw new Error("Failed to call Kilpi API");
 
@@ -63,25 +73,21 @@ function callKilpiApiEndpoint(body: RequestBody) {
 
 The request body is serialized with [SuperJSON](https://www.npmjs.com/package/superjson).
 
-For batching purposes, the Kilpi API is always called with an array of items, each one of which has a unique `requestId` and a type indicating the type of the request.
+For batching purposes, the Kilpi API is always called with an array of items, each one of which has a unique `requestId` and a type indicating the type of the request. Depending on the type, the request may require additional data.
 
 ```ts
 type RequestBody = Array<
   | {
-      requestId: string;
       type: "getIsAuthorized";
-
-      // Indicate which policy to evaluate (e.g. "documents:create")
-      policy: string;
-
-      // Optionally provide the resource for evaluating the policy on
-      resource?: any;
+      requestId: string;
+      policy: string; // Policy key (e.g. "documents:create")
+      resource?: any; // Optional resource
     }
   | {
-      requestId: string;
       type: "getSubject";
+      requestId: string;
     }
->
+>;
 ```
 
 ### Response schema
@@ -89,5 +95,5 @@ type RequestBody = Array<
 The response is always a corresponding array of items, with each item having a matching `requestId` and `data` attribute indicating the response data for that item.
 
 ```ts
-type ResponseBody = Array<{ requestId: string, data: any }>
+type ResponseBody = Array<{ requestId: string; data: any }>;
 ```
