--- a/apps/docs/docs/concepts/usage-on-client.mdx
+++ b/apps/docs/docs/concepts/usage-on-client.mdx
@@ -24,28 +24,38 @@ You can also use Kilpi on the client-side, as long as you have a server-side ins
 
 <Steps>
 <Step>
+
 ### Install the `@kilpi/client` package
 
 <Tabs syncKey="package-manager">
-  <Tab label="npm">
-    ```bash
-    npm install @kilpi/client
-    ```
-  </Tab>
+<Tab label="npm">
 
-{" "}
+```bash
+npm install @kilpi/client
+```
 
-<Tab label="yarn">```bash yarn add @kilpi/client ```</Tab>
+</Tab>
+<Tab label="yarn">
 
-{" "}
+```bash
+yarn add @kilpi/client
+```
 
-<Tab label="pnpm">```bash pnpm add @kilpi/client ```</Tab>
+</Tab>
+<Tab label="pnpm">
 
-  <Tab label="bun">
-    ```bash
-    bun add @kilpi/client
-    ```
-  </Tab>
+```bash
+pnpm add @kilpi/client
+```
+
+</Tab>
+<Tab label="bun">
+
+```bash
+bun add @kilpi/client
+```
+
+</Tab>
 </Tabs>
 </Step>
 <Step>
