docs: add teaser for client-first api

--- a/apps/docs/docs/concepts/usage-on-client.mdx
+++ b/apps/docs/docs/concepts/usage-on-client.mdx
@@ -24,6 +24,8 @@ You can also use Kilpi on the client-side, as long as you have a server-side ins
 1.  **Backend access**: The `getSubject` function and policies are all asynchronous and should be able to access e.g. the database.
 1.  **Sensitive data**: The policies or the `getSubject` function may handle sensitive data which shouldn't be exposed to the client.
 
+In the future, there are plans to create an alternative client-first API for client-side applications.
+
 </Collapsible>
 
 </Aside>
